MADE CHANGES DUE TO MISTAKES
- added commentary to the style.css in order to
	explain the main concept about the effect

--- a/wavy-bg-border-effect/style.css
+++ b/wavy-bg-border-effect/style.css
@@ -1,3 +1,7 @@
+/* 
+    the main concept is using the clip-path property to clip the element outlining the border
+*/
+
 * {
     box-sizing: border-box;
 }
